// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCard should be rendered correctly with Excel file 1`] = `
<DocumentFragment>
  <div
    class="flexCell root uui-file_card uui-loading"
    style="min-width: 0; flex-basis: 100%;"
  >
    <div
      class="root uui-flex-row uui-size-36 alignItems columnGap"
      style="--uui-flex-row-align-items: top; --uui-flex-row-column-gap: 6px;"
    >
      <div
        class="container uui-icon uui-enabled xlsColor"
      >
        <svg
          class=""
          height="24"
          width="24"
        />
      </div>
      <div
        class="flexCell"
        style="min-width: 0; flex-basis: 100%;"
      >
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline fileName container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          Test
        </div>
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          XLS, 0 Bytes of 12.25 KB
        </div>
      </div>
      <div
        class="iconsBlock"
      >
        <svg
          class="root"
          height="18"
          width="18"
        >
          <circle
            cx="9"
            cy="9"
            fill="transparent"
            r="3"
            stroke-dasharray="18.84955592153876"
            stroke-dashoffset="18.84955592153876"
            stroke-width="6"
          />
          <circle
            cx="9"
            cy="9"
            fill="transparent"
            r="8"
            stroke-width="1"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileCard should be rendered correctly with doc file 1`] = `
<DocumentFragment>
  <div
    class="flexCell root uui-file_card uui-loading"
    style="min-width: 140px; flex-basis: 0px;"
  >
    <div
      class="root uui-flex-row uui-size-36 alignItems columnGap"
      style="--uui-flex-row-align-items: top; --uui-flex-row-column-gap: 6px;"
    >
      <div
        class="container uui-icon uui-enabled docColor"
      >
        <svg
          class=""
          height="24"
          width="24"
        />
      </div>
      <div
        class="flexCell"
        style="min-width: 0; flex-basis: 100%;"
      >
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline fileName container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          Test
        </div>
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          DOC, 0 Bytes of 12.25 KB
        </div>
      </div>
      <div
        class="iconsBlock"
      >
        <svg
          class="root"
          height="18"
          width="18"
        >
          <circle
            cx="9"
            cy="9"
            fill="transparent"
            r="3"
            stroke-dasharray="18.84955592153876"
            stroke-dashoffset="18.84955592153876"
            stroke-width="6"
          />
          <circle
            cx="9"
            cy="9"
            fill="transparent"
            r="8"
            stroke-width="1"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileCard should be rendered correctly with img file 1`] = `
<DocumentFragment>
  <div
    class="flexCell root uui-file_card"
    style="min-width: 140px; flex-basis: 0px;"
  >
    <div
      class="root uui-flex-row uui-size-36 alignItems columnGap"
      style="--uui-flex-row-align-items: top; --uui-flex-row-column-gap: 6px;"
    >
      <div
        class="container uui-icon uui-enabled imgColor"
      >
        <svg
          class=""
          height="24"
          width="24"
        />
      </div>
      <div
        class="flexCell"
        style="min-width: 0; flex-basis: 100%;"
      >
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography-inline fileName container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          Test
        </div>
        <div
          class="root uui-text uui-size-none lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 18px;"
        >
          GIF, 12.25 KB
        </div>
      </div>
      <div
        class="iconsBlock"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
